Fix frontend production healthcheck